<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:clickable="true">

        <android.support.v7.widget.Toolbar
            app:contentInsetStart="0dp"
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/frg_congratulation_back_pressed"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                app:srcCompat="@drawable/ic_arrow_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/confirm_swish"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_13sdp" />

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/regular_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/congratulations"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                style="@style/regular_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/your_item_has_been_successfully_" />

            <TextView
                style="@style/regular_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/you_will_be_notified_of_any_" />

            <TextView
                android:id="@+id/frg_congratulation_send_view_item"
                style="@style/Button"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/view_item" />

            <TextView
                android:id="@+id/frg_congratulation_send_share"
                style="@style/Button"
                android:layout_gravity="center_horizontal"
                android:text="@string/share" />
        </LinearLayout>
    </LinearLayout>

</layout>