<?xml version="1.0" encoding="utf-8"?>

<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">

        <Button
            android:id="@+id/pick_location_swisshd_point"
            style="@style/Button"
            android:layout_weight="1"
            android:background="@drawable/drw_corner_white_background"
            android:text="@string/swisshd_point" />

        <TextView
            style="@style/regular_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_8sdp"
            android:text="@string/or"
            android:textAllCaps="true"
            android:textStyle="bold" />

        <Button
            android:id="@+id/pick_location_use_address"
            style="@style/Button"
            android:layout_weight="1"
            android:background="@drawable/drw_corner_white_background"
            android:text="@string/use_address" />

    </LinearLayout>

</layout>