<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:fitsSystemWindows="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frg_swiss_details_done"
            style="@style/Button"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_weight="1"
            android:visibility="visible"
            android:text="@string/accept_job" />

        <TextView
            android:id="@+id/frg_swiss_details_propose_date"
            style="@style/Button"
            android:layout_marginLeft="@dimen/_8sdp"
            android:layout_weight="1"
            android:visibility="visible"
            android:text="@string/propose_date" />

        <TextView
            android:id="@+id/frg_swiss_details_propose_remove"
            style="@style/Button"
            android:layout_weight="1"
            android:text="@string/remove_offer"
            android:textAllCaps="true"
            android:visibility="gone" />

    </LinearLayout>
</layout>