<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="@dimen/_20sdp">

        <TextView
            style="@style/regular_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_title"
            android:textAllCaps="true" />

        <EditText
            android:id="@+id/frg_send_create_item_title"
            style="@style/EditText"
            android:imeOptions="actionDone" />

        <TextView
            style="@style/regular_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_item_size"
            android:textAllCaps="true" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/frg_send_create_item_size_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/frg_send_create_item_price"
            style="@style/regular_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAllCaps="true" />

        <LinearLayout
            android:id="@+id/frg_send_create_item_price_more"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/frg_send_item_price_more_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false" />

            <TextView
                style="@style/regular_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/item_value_greater_than_50" />

        </LinearLayout>

        <Button
            android:id="@+id/frg_send_create_item_continue"
            style="@style/Button"
            android:layout_gravity="center_horizontal"
            android:text="@string/continue_string" />

    </LinearLayout>

</layout>