<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="click"
            type="com.app.swishd.home.interfaces.OnBottomMenuCallback" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/black"
            android:background="@drawable/drw_button_background"
            android:onClick="@{(v)->click.onSearchClick(v)}"
            android:text="@string/search"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:gravity="center"
            android:background="@drawable/drw_button_background"
            android:onClick="@{(v)->click.onMeClick(v)}"
            android:text="@string/me"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@android:color/black"
            android:background="@drawable/drw_button_background"
            android:gravity="center"
            android:onClick="@{(v)->click.onSenderClick(v)}"
            android:text="@string/sender"
            android:textSize="16sp" />

    </LinearLayout>

</layout>